<resources>
    <string name="app_name">GeoMaster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="please_turn_on_internet_connection_to_continue">Please! Turn on internet to continue</string>
    <string name="ok">Ok</string>
    <string name="unKnow_value">N/A</string>
    <string name="disconnect_value">Disconnect</string>
    <string name="create_project">Create Projects</string>
    <string name="create_config">Add Config</string>
    <string name="nm_project">Project Name</string>
    <string name="op_project">Operator Name (Optional)</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="datum_nm">Datum Name</string>
    <string name="user_name">User Name</string>
    <string name="rem_me">Remember Me</string>
    <string name="user_pass">Password</string>
    <string name="login_btn">Login</string>
    <string name="add_manually">Add Manually</string>
    <string name="zn_datum_type">Datum Type</string>
    <string name="datum_type">Datum Type</string>
    <string name="continent">Continent</string>
    <string name="country">Countries</string>
    <string name="angle_nm">Angle Unit</string>
    <string name="zn_data">Zone Data</string>
    <string name="projection_data">Projection Type</string>
    <string name="zone_projection">Zone Projection</string>
    <string name="projection_data_type">Type</string>
    <string name="elv_ky_data">Elevation</string>
    <string name="geoid_data">Geoid Values</string>
    <string name="hemisphere_data">H</string>
    <string name="zn_hemisphere_data">Hemisphere</string>
    <string name="sbm_btn">Submit</string>
    <string name="create_custom_project">Create Custom Project</string>
    <string name="set_up_conn">Set Up Connections</string>
    <string name="set_up_comm">Set Up Communication</string>
    <string name="set_up_auto">Set Up AutoBase</string>
    <string name="set_up_manny">Set Up ManualBase</string>
    <string name="device_info">Device Info</string>
    <string name="gnss_base_profile">GNSS Base Profile</string>
    <string name="corr_txt">Correction</string>
    <string name="new_corr_source">New Correction Source</string>
    <string name="project_comment_data">Project Comment (Optional)</string>
    <string name="rtk_by_radio">RTK by Radio</string>
    <string name="rtk_by_internet">RTK by Internet</string>
    <string name="rtk_by_wifIn">RTK by WiFi</string>
    <string name="internal_radio_txt">Internal Radio</string>
    <string name="external_radio_txt">External Radio</string>
    <string name="togle_pre_conn">Toggle Previous Connection</string>
    <string name="ip_connection">IP</string>
    <string name="power_txt">Power</string>
    <string name="proto_txt">Protocol</string>
    <string name="fegquency_txt">Frequency</string>
    <string name="port_connection">Port</string>
    <string name="mount_point">Mount-Point</string>
    <string name="wift_setup">Wifi Setup</string>
    <string name="radio_comm">Radio Communication</string>
    <string name="ntrip_conn">NTRIP Connection</string>
    <string name="connection_type">Connection Type:</string>
    <string name="bluetooth_device">Bluetooth Device:</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="refreshlist">RefreshList</string>


    <string-array name="business_location_type">
        <!--  <item>Select</item>-->
        <item>Bluetooth</item>
        <item>Serial Port</item>
    </string-array>

    <string name="ssid_conn">SSID</string>
    <string name="ssid_pass_conn">SSID Password</string>


</resources>