<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:conext="com.apogee.geomaster.ui.connection.radio.RadioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/internal_radio_btn"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/internal_radio_txt"
                android:textStyle="bold" />


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/external_radio_btn"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/external_radio_txt"
                android:textStyle="bold" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_comm_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/md_theme_dark_inversePrimary"
            android:text="@string/set_up_comm"
            android:textColor="@color/md_theme_light_onSecondary"
            app:layout_constraintLeft_toLeftOf="@id/radio_grp"
            app:layout_constraintRight_toRightOf="@id/radio_grp"
            app:layout_constraintTop_toBottomOf="@id/radio_grp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_ls"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set_comm_btn"
            tools:listitem="@layout/communction_item_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
