<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E7EFF6">


        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/card_lyt"
            android:padding="10dp"
            app:layout_constraintVertical_bias="0.3"
            android:elevation="8dp"
            app:strokeColor="@color/md_theme_light_shadow"
            app:strokeWidth="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_nm_ed_layout"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/md_theme_light_scrim"
                    app:boxStrokeColor="@color/md_theme_light_scrim"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/md_theme_light_scrim"
                    app:hintTextColor="@color/md_theme_light_scrim"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/user_nm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_word_layout"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/user_pass"
                    android:textColorHint="@color/md_theme_light_scrim"
                    app:boxStrokeColor="@color/md_theme_light_scrim"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/md_theme_light_scrim"
                    app:hintTextColor="@color/md_theme_light_scrim"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_nm_ed_layout">

                    <EditText
                        android:id="@+id/pass_word"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/rem_me"
                    app:layout_constraintLeft_toLeftOf="@id/pass_word_layout"
                    app:layout_constraintTop_toBottomOf="@id/pass_word_layout" />


                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/login_btn"
                    app:strokeWidth="1dp"
                    android:padding="10dp"
                    app:strokeColor="@color/md_theme_dark_onPrimary"
                    app:rippleColor="@color/md_theme_dark_primary"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/md_theme_light_primary"
                    android:text="@string/login_btn"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:textSize="19sp"
                    app:cornerRadius="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/remember_me"
                    app:layout_constraintRight_toRightOf="@id/pass_word_layout"
                    app:layout_constraintTop_toBottomOf="@id/remember_me" />


                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:trackCornerRadius="10dp"
                    android:id="@+id/pb"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="@id/login_btn"
                    app:layout_constraintRight_toRightOf="@id/login_btn"
                    app:layout_constraintBottom_toBottomOf="@id/login_btn"
                    app:layout_constraintLeft_toLeftOf="@id/login_btn"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>







    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>